[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/enemies/mob/kamikaze-idle.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/mob/m_3.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemies/mob/behavior/wait.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemies/mob/behavior/follow.gd" type="Script" id=6]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=7]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_1/throw.gd" type="Script" id=8]
[ext_resource path="res://scripts/enemies/mob/behavior/search.gd" type="Script" id=9]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_1/throwable.gd" type="Script" id=10]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/takeDamage.gd" type="Script" id=11]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/hit.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 36.522

[sub_resource type="CircleShape2D" id=2]
radius = 371.308

[sub_resource type="CircleShape2D" id=3]
radius = 38.7806

[sub_resource type="CircleShape2D" id=4]
radius = 25.9533

[sub_resource type="CircleShape2D" id=5]
radius = 26.4011

[node name="Node2D" type="Node2D"]

[node name="mob_3" type="RigidBody2D" parent="."]
collision_layer = 4
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="hurtbox" type="CollisionShape2D" parent="mob_3"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="mob_3"]
position = Vector2( -1.09102, 2.74562 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
flip_h = true
hframes = 6
frame = 1

[node name="aggro_zone" type="Area2D" parent="mob_3"]
visible = false
collision_layer = 0
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="mob_3/aggro_zone"]
position = Vector2( -2, 0 )
shape = SubResource( 2 )

[node name="BehaviorTree" type="Node" parent="mob_3"]
script = ExtResource( 4 )

[node name="BehaviorSelector" type="Node" parent="mob_3/BehaviorTree"]
script = ExtResource( 5 )

[node name="BehaviorSequence3" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector"]
script = ExtResource( 7 )

[node name="throwable" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 10 )

[node name="throw" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 8 )

[node name="BehaviorSequence2" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector"]
script = ExtResource( 7 )

[node name="hit" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 12 )

[node name="takeDamage" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 11 )

[node name="BehaviorSequence" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector"]
script = ExtResource( 7 )

[node name="search" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 9 )

[node name="follow" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 6 )

[node name="wait" type="Node" parent="mob_3/BehaviorTree/BehaviorSelector"]
script = ExtResource( 3 )

[node name="hitbox" type="Area2D" parent="mob_3"]
collision_layer = 0
collision_mask = 66

[node name="shape" type="CollisionShape2D" parent="mob_3/hitbox"]
shape = SubResource( 3 )

[node name="ThrowTimer" type="Timer" parent="mob_3"]
wait_time = 0.3

[node name="pro_box" type="Area2D" parent="mob_3"]
visible = false
collision_layer = 0
collision_mask = 4

[node name="shape" type="CollisionShape2D" parent="mob_3/pro_box"]
shape = SubResource( 4 )
disabled = true

[node name="pro_box_wall" type="Area2D" parent="mob_3"]
visible = false
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="mob_3/pro_box_wall"]
shape = SubResource( 5 )
disabled = true

[connection signal="body_entered" from="mob_3/aggro_zone" to="mob_3" method="_on_aggro_zone_body_entered"]
[connection signal="area_entered" from="mob_3/hitbox" to="mob_3" method="_on_hitbox_parry_entered"]
[connection signal="body_entered" from="mob_3/hitbox" to="mob_3" method="_on_hitbox_player_entered"]
[connection signal="timeout" from="mob_3/ThrowTimer" to="mob_3" method="slowTimeThrow"]
[connection signal="body_entered" from="mob_3/pro_box" to="mob_3" method="_on_pro_box_enemy_entered"]
[connection signal="body_entered" from="mob_3/pro_box_wall" to="mob_3" method="_on_pro_box_wall_wall_entered"]
